tests/vertical-slice/accept/result_unwrap_err_aborts.hew
fn main() {
    let r: Result<bool, bool> = Err(false);
    let _v = r.unwrap();
}
