tests/vertical-slice/reject/gen_capture_whole_value_match_arm.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let c = true;
    let _g = gen {
        match c {
            true => { items },
            false => { items },
        }
    };
}
